Add hidden type to lexicon

--- a/views/symfony/tab_symfony.html.twig
+++ b/views/symfony/tab_symfony.html.twig
@@ -5,6 +5,8 @@
 
     {{ form_start(symfonyForm) }}
 
+        {{ form_row(symfonyForm.Hidden) }}
+
         <fieldset>
             <legend class="legend">Text fields</legend>
             {{ form_row(symfonyForm.Text) }}
