--- a/views/symfony/tab_symfony.html.twig
+++ b/views/symfony/tab_symfony.html.twig
@@ -55,6 +55,10 @@
             {{ form_row(symfonyForm.BirthdayChoice) }}
             {{ form_row(symfonyForm.BirthdayText) }}
             {{ form_row(symfonyForm.BirthdaySingleText) }}
+            {{ form_row(symfonyForm.DateIntervalChoice) }}
+            {{ form_row(symfonyForm.DateIntervalText) }}
+            {{ form_row(symfonyForm.DateIntervalInteger) }}
+            {{ form_row(symfonyForm.DateIntervalSingleText) }}
         </fieldset>
 
         <fieldset>
