Fix all current unit tests

--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-guidance.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-guidance.html.twig
@@ -6,26 +6,22 @@
         'guidance': 'foo <span class="bar">bar</span>',
         'options': [
             {
-                'label': 'None',
-                'id': 'form_field_placeholder',
-                'name': 'placeholder'
-            },
-            {
                 'label': 'Foo',
                 'id': 'form_field_0',
-                'name': '0',
-                'value': '0'
+                'name': 'form[field]',
+                'value': '0',
+                'checked': 'checked'
             },
             {
                 'label': 'Bar',
                 'id': 'form_field_1',
-                'name': '1',
+                'name': 'form[field]',
                 'value': '1'
             },
             {
                 'label': 'Baz',
                 'id': 'form_field_2',
-                'name': '2',
+                'name': 'form[field]',
                 'value': '2'
             }
         ]
