--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-required-guidance.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-required-guidance.html.twig
@@ -10,7 +10,8 @@
                 'label': 'Foo',
                 'id': 'form_field_0',
                 'name': 'form[field]',
-                'value': '0'
+                'value': '0',
+                'checked': 'checked'
             },
             {
                 'label': 'Bar',
