--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice.html.twig
@@ -5,15 +5,11 @@
         'label': 'foo',
         'options': [
             {
-                'label': 'None',
-                'id': 'form_field_placeholder',
-                'name': 'placeholder',
-            },
-            {
                 'label': 'Foo',
                 'id': 'form_field_0',
                 'name': 'form[field]',
-                'value': '0'
+                'value': '0',
+                'checked': 'checked'
             },
             {
                 'label': 'Bar',
