--- a/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-required.html.twig
+++ b/tests/unit/Jadu/Pulsar/Twig/Macro/Fixtures/form/choice-required.html.twig
@@ -8,19 +8,20 @@
             {
                 'label': 'Foo',
                 'id': 'form_field_0',
-                'name': '0',
-                'value': '0'
+                'name': 'form[field]',
+                'value': '0',
+                'checked': 'checked'
             },
             {
                 'label': 'Bar',
                 'id': 'form_field_1',
-                'name': '1',
+                'name': 'form[field]',
                 'value': '1'
             },
             {
                 'label': 'Baz',
                 'id': 'form_field_2',
-                'name': '2',
+                'name': 'form[field]',
                 'value': '2'
             }
         ]
