--- a/views/symfony/tab_symfony.html.twig
+++ b/views/symfony/tab_symfony.html.twig
@@ -21,6 +21,7 @@
             {{ form_row(symfonyForm.Search) }}
             {{ form_row(symfonyForm.Url) }}
             {{ form_row(symfonyForm.Range) }}
+            {{ form_row(symfonyForm.Color) }}
         </fieldset>
 
         <fieldset>
