--- a/views/pulsar/v2/helpers/elem.html.twig
+++ b/views/pulsar/v2/helpers/elem.html.twig
@@ -116,13 +116,15 @@ name    | string | The name of this control
 
     {% if options.label is not empty or options.guidance is not empty %}
         <{{ attributes(options
-            |exclude('container guidance guidance-container label required show-label tag ' ~ (tag == 'span' ? 'for'))
+            |exclude('container guidance guidance-container label required required-indicator show-label tag ' ~ (tag == 'span' ? 'for'))
             |defaults({
                 'class': 'control__label' ~ labelVisibilityClass|default
             }), {'tag': (tag)}) }}>
 
             {{- options.label|raw -}}
-            {{ util.required(options.required|default(false)) }}
+            {%- if options['required-indicator'] is not defined or options['required-indicator'] != false -%}
+                {{ util.required(options.required|default(false)) }}
+            {%- endif -%}
             {{ util.guidance(options.guidance|default, { 'guidance-container': options['guidance-container']|default }) }}
         </{{ tag }}>
     {% endif %}
