--- a/views/symfony/index.html.twig
+++ b/views/symfony/index.html.twig
@@ -17,7 +17,8 @@
         {
             "id"    : "symfony",
             "label" : "Standard Symfony",
-            "src"   : tab_symfony
+            "src"   : tab_symfony,
+            "active": true
         },
         {
             "id"    : "pulsar",
@@ -28,7 +29,6 @@
             "id"    : "text",
             "label" : "Text",
             "src"   : tab_text,
-            "active": true
         }
     ]
 %}
