Prevent choice helper alignment margin being used on Symfony choice inputs which use a select element

--- a/stylesheets/_component.forms.scss
+++ b/stylesheets/_component.forms.scss
@@ -632,7 +632,7 @@ fieldset {
 }
 
 .form-choice {
-    > .controls {
+    > .controls > .control__label:first-of-type {
         margin-top: 11px; // magic number to align with main label
 
         > .control__label {
